fix dark mode

--- a/src/app/_components/LandingPage/_components/LiveActivity/LiveActivity.module.scss
+++ b/src/app/_components/LandingPage/_components/LiveActivity/LiveActivity.module.scss
@@ -104,7 +104,7 @@
         height: 64px;
         border-radius: 10px;
         gap: 10px;
-        background: #F4F4F4;
+        background: $light-gray;
         padding: 0 12px;
         box-sizing: border-box;
 
